Stage Drive/Backend/justbitteam-stagedriving_be-2881552384fc/.kube/common/grafana-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
        - grafana.stagedriving.com
      secretName: grafana-secret
  rules:
    - host: grafana.stagedriving.com
      http:
        paths:
        - path: /*
          backend:
            serviceName: grafana
            servicePort: 80
        - path: /
          backend:
            serviceName: grafana
            servicePort: 80
